--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "luxon": "^3.4.0",
     "mongoose": "^7.3.4",
     "validator": "^13.11.0"
   },
